force-app/main/default/objects/DC_Cage__c/DC_Cage__c.object-meta.xml
<CustomObject>
    <label>Cage</label>
    <nameField>
        <label>Cage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>