force-app/main/default/objects/DC_Cage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Asset__r.AccountId, Asset__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>