force-app/main/default/objects/DC_Cage__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PR1031160-862 Updates to Panel, Cabinet &amp; cage fields to help work the subflows</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cages</relationshipLabel>
    <relationshipName>Cages</relationshipName>
    <type>Lookup</type>
</CustomField>