force-app/main/default/objects/DC_Cage__c/fields/Customer_Cage_Sq_FT__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cage_Sq_FT__c</fullName>
    <description>Validation rule: If Customer Cage &gt;0, other Empty or 0</description>
    <label>Customer Cage Sq FT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>