force-app/main/default/objects/DC_Cage__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Data Hall this Cage is in.</description>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Cages</relationshipLabel>
    <relationshipName>Cages</relationshipName>
    <type>Lookup</type>
</CustomField>