force-app/main/default/objects/DC_Cage__c/fields/Legacy_Cage_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cage_Name__c</fullName>
    <description>The legacy name of this cage, according to the Rack Inventory spreedsheets.</description>
    <label>Legacy Cage Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>