force-app/main/default/objects/DC_Cage__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Asset__r.Service_Order__r.Id , Asset__r.Service_Order__r.Service_Order_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Order</label>
    <type>Text</type>
</CustomField>