force-app/main/default/objects/DC_Cage__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Ten character short name of the Cage used to support naming convention.</description>
    <label>Short Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>