force-app/main/default/objects/DC_Cage__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>If the cage is not a Virtual Cage or Pod, then =Customer Cage Sq FT . If the cage is a Virtual Cage or Pod it is =Cabinets Sq ft</description>
    <label>Square Footage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>